2008-08-08  Loïc Minier  <lool@dooz.org>

	Bug 535124 – umask 002 not being applied for new directories, new
	files get the correct umask

	* glocalfile.c: (g_local_file_make_directory): Use 0777 instead of
	0755 as umask

2008-08-08  Tor Lillqvist  <tml@novell.com>

	* gwin32mount.c: Remove unused code. Whitespace cleanup.

	* gwin32volumemonitor.c (get_connected_drives): Put questionable
	code that didn't actually do anything inside #if 0, and add a
	comment wondering what the code was supposed to do. This also gets
	rid of a leftover debugging printout.

2008-08-07  Paul Pogonyshev  <pogonyshev@gmx.net>

	* gfileicon.c (g_file_icon_get_property)
	(g_file_icon_set_property): New functions.
	(g_file_icon_class_init): Hook them up.  Install `GFileIcon:file'
	property.
	(g_file_icon_new): Use the property (bug #546132).

2008-08-06  Paul Pogonyshev  <pogonyshev@gmx.net>

	* gthemedicon.c (g_themed_icon_get_property): Also handle
	`PROP_USE_DEFAULT_FALLBACKS'.
	(g_themed_icon_class_init): Make
	`GThemedIcon:use-default-fallbacks' read-write (bug #546483).

2008-08-05  Behdad Esfahbod  <behdad@gnome.org>

	Bug 546371 – Improve docs re g_file_monitor

	* gfilemonitor.c: Mention g_file_monitor() in the docs.

2008-08-04  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.17.6 ===

2008-08-04  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.17.5 ===

2008-08-04  Matthias Clasen  <mclasen@redhat.com>

	Bug 546017 – Don't copy attributes when copying a symlink

	* gfile.c (g_file_copy_attributes): Specify
	G_FILE_QUERY_INFO_NOFOLLOW_SYMLINKS in the call to 
	g_file_set_attributes_from_info. Patch by Christian Kellner

2008-08-04  Matthias Clasen  <mclasen@redhat.com>

	* gemblemedicon.[hc]: 
	* gio.symbols:
	* gemblem.[hc]: Add GEmblem to make the emblem mechanism
	a bit more extensible. Work by Clemens Buss.

	* gioenums.h: Add GEmblemOrigin.
	* Makefile.am: Glue

2008-08-03  Carlos Garcia Campos  <carlosgc@gnome.org>

	Bug 546079 – leak in xdgmime
	